--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=WIN-GIANLUCA;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
